--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-simply-carousel": "^5.1.3",
+    "react-slideshow-image": "^3.5.1",
     "react-zoom-pan-pinch": "^2.1.3",
+    "rn-range-slider": "^2.1.1",
     "scenejs": "^1.5.0",
     "shortid": "^2.2.16",
     "web-vitals": "^0.2.4",
