--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.21.4",
+    "date-fns": "^2.24.0",
     "draft-js": "^0.11.7",
     "firebase": "^8.6.1",
     "framework-utils": "^1.1.0",
