--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "fuse.js": "^6.4.6",
     "material-ui-color-picker": "^3.5.1",
     "normalize.css": "^8.0.1",
+    "re-resizable": "^6.9.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-contenteditable": "^3.3.6",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-draggable": "^4.4.4",
+    "react-editable-text": "^1.2.1",
     "react-icons": "^4.2.0",
+    "react-konva": "*",
     "react-moveable": "^0.29.0",
     "react-multi-carousel": "^2.6.5",
     "react-reveal": "^1.2.2",
@@ -34,6 +37,7 @@
     "rn-range-slider": "^2.1.1",
     "scenejs": "^1.5.0",
     "shortid": "^2.2.16",
+    "use-image": "^1.0.8",
     "web-vitals": "^0.2.4",
     "yarn": "^1.22.11"
   },
