--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^8.6.1",
     "framework-utils": "^1.1.0",
     "fuse.js": "^6.4.6",
+    "konva": "^8.2.2",
     "material-ui-color-picker": "^3.5.1",
     "normalize.css": "^8.0.1",
     "re-resizable": "^6.9.1",
@@ -24,8 +25,9 @@
     "react-draft-wysiwyg": "^1.14.7",
     "react-draggable": "^4.4.4",
     "react-editable-text": "^1.2.1",
+    "react-grid-layout": "^1.3.0",
     "react-icons": "^4.2.0",
-    "react-konva": "*",
+    "react-konva": "^16.8.6",
     "react-moveable": "^0.29.0",
     "react-multi-carousel": "^2.6.5",
     "react-reveal": "^1.2.2",
