--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "re-resizable": "^6.9.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
+    "react-colorful": "^5.5.0",
     "react-contenteditable": "^3.3.6",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
